TST-442 Bug 1370
Fixed product review link not working and
review section not showing up in PDP

--- a/assets/scss/custom/layout/_product.scss
+++ b/assets/scss/custom/layout/_product.scss
@@ -123,6 +123,9 @@
 
     // Product Description
     .productView-description {
+        .productView-title {
+            display: none;
+        }
         .tabs {
             display:none;
             .tab {
